PZAccountKit // Including Currency Wars intel in notifications.

--- a/Packages/PZKit/Sources/PZAccountKit/Resources/Localizable.xcstrings
+++ b/Packages/PZKit/Sources/PZAccountKit/Resources/Localizable.xcstrings
@@ -2070,73 +2070,73 @@
         "de" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Der simulierte Universums-Score für %1$@ ist noch nicht vollständig. Der aktuelle Fortschritt beträgt %2$@/%3$@."
+            "value" : "Der Simulierte-Universums-Score (inkl. Währungskriegs-Score) für %1$@ ist noch nicht vollständig. Der aktuelle Fortschritt beträgt %2$@/%3$@."
           }
         },
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "The simulated universe score for %1$@ is not yet full. The current progress is %2$@/%3$@."
+            "value" : "The simulated universe score (incl. currency wars score) for %1$@ is not yet full. The current progress is %2$@/%3$@."
           }
         },
         "es" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "La puntuación del universo simulado para %1$@ aún no está completa. El progreso actual es %2$@/%3$@."
+            "value" : "La puntuación del universo simulado (incluido el puntaje de las guerras de divisas) para %1$@ aún no está completa. El progreso actual es %2$@/%3$@."
           }
         },
         "fil" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Ang na-simulate na puntos ng uniberso para sa %1$@ ay hindi pa kumpleto. Ang kasalukuyang progreso ay %2$@/%3$@."
+            "value" : "Ang na-simulate na puntos ng uniberso (kabilang ang puntos ng digmaan sa pera) para sa %1$@ ay hindi pa kumpleto. Ang kasalukuyang progreso ay %2$@/%3$@."
           }
         },
         "fr" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Le score de l'univers simulé pour %1$@ n'est pas encore complet La progression actuelle est de %2$@/%3$@"
+            "value" : "Le score de l'univers simulé (incluant le score des guerres monétaires) pour %1$@ n'est pas encore complet La progression actuelle est de %2$@/%3$@"
           }
         },
         "it" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Il punteggio dell'universo simulato per %1$@ non è ancora completo. L'attuale progresso è %2$@/%3$@"
+            "value" : "Il punteggio dell'universo simulato (incluso il punteggio delle guerre valutarie) per %1$@ non è ancora completo. L'attuale progresso è %2$@/%3$@"
           }
         },
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "「%1$@」の模擬宇宙ポイントは未満です。現在の進捗状況は：%2$@/%3$@。"
+            "value" : "「%1$@」の模擬宇宙ポイント（貨幣戦争のも含む）は未満です。現在の進捗状況は：%2$@/%3$@。"
           }
         },
         "ko" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "%1$@의 모의 우주 점수가 아직 가득 차지 않았습니다 현재 진행 상황은 %2$@/%3$@입니다"
+            "value" : "%1$@의 모의 우주 점수 (통화 전쟁 점수 포함) 가 아직 가득 차지 않았습니다 현재 진행 상황은 %2$@/%3$@입니다"
           }
         },
         "ru" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Симуляция очков вселенной для %1$@ еще не завершена. Текущий прогресс %2$@/%3$@"
+            "value" : "Симуляция очков вселенной (включая очки валютных войн) для %1$@ еще не завершена. Текущий прогресс %2$@/%3$@"
           }
         },
         "vi" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Điểm vũ trụ mô phỏng cho %1$@ chưa đầy. Tiến trình hiện tại là %2$@/%3$@."
+            "value" : "Điểm vũ trụ mô phỏng (bao gồm điểm chiến tranh tiền tệ) cho %1$@ chưa đầy. Tiến trình hiện tại là %2$@/%3$@."
           }
         },
         "zh-Hans" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "「%1$@」的模拟宇宙积分未满，当前进度为 %2$@/%3$@。"
+            "value" : "「%1$@」的模拟宇宙&货币战争积分未满，当前进度为 %2$@/%3$@。"
           }
         },
         "zh-Hant" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "「%1$@」的模擬宇宙積分未滿，當前進度為 %2$@/%3$@。"
+            "value" : "「%1$@」的模擬宇宙&貨幣戰爭積分未滿，當前進度為 %2$@/%3$@。"
           }
         }
       }
